[gd_scene load_steps=3 format=3 uid="uid://v82t515btswh"]

[ext_resource type="Script" uid="uid://dwfk5jyutaug5" path="res://GUI/Market/market_ui.gd" id="1_ggosb"]
[ext_resource type="StyleBox" uid="uid://bblg5uvit4jtr" path="res://GUI/Inventory/inventory.tres" id="2_c42pb"]

[node name="MarketUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ggosb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Panel" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = ExtResource("2_c42pb")

[node name="InventoryContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel"]
unique_name_in_owner = true
layout_mode = 2
columns = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
alignment = 2

[node name="TransactionButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Совершить сделку"
autowrap_mode = 2

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Закрыть
"

[node name="TooltipPanel" type="PopupPanel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
visible = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/TooltipPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 96.0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/TooltipPanel/VBoxContainer"]
layout_mode = 2

[node name="Description" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/TooltipPanel/VBoxContainer"]
layout_mode = 2

[node name="Cost" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/TooltipPanel/VBoxContainer"]
layout_mode = 2

[node name="Panel2" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = ExtResource("2_c42pb")

[node name="MarketContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/Panel2"]
unique_name_in_owner = true
layout_mode = 2
columns = 5
